tests/samples/block-undefined/error.txt
Unknown block name "lorem" on line 2 at index 3.

1|// error: lorem
2|{@lorem}
    ^
3|    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
